Fix tooltip issue, prevent scrolling when open nav menu in mobile size and modify scrollbar

--- a/src/containers/skills/styles.scss
+++ b/src/containers/skills/styles.scss
@@ -70,6 +70,7 @@
 
 .rc-tooltip-placement-top {
   padding: 5px 0;
+  z-index: -1;
 
   .rc-tooltip-arrow {
     border-top-color: var(--yellow-theme-main-color);
